# TurkishNamedEntityRecognition-CPP

./: .gitignore  AutoNER.h  CMakeLists.txt  Gazetteer.cpp  NERCorpus.cpp  NERCorpus.h  NamedEntitySentence.cpp  NamedEntitySentence.h  NamedEntityType.h  NamedEntityWord.cpp  README.md  Slot.cpp  Slot.h  TestGazetteer.cpp  conanfile.py  conanfile.txt
Test/: GazetteerTest.cpp  NERCorpusTest.cpp  NamedEntityTypeTest.cpp  SlotTest.cpp
include/: Word.h
src/: CMakeLists.txt  Gazetteer.cpp  Gazetteer.h  NERCorpus.cpp  NERCorpus.h  NamedEntitySentence.cpp  NamedEntitySentence.h  NamedEntityType.h  NamedEntityWord.cpp  NamedEntityWord.h  Slot.cpp  Slot.h  SlotType.h
